--- a/install
+++ b/install
@@ -22,10 +22,10 @@ for i,dir in pairs(dirs) do
   fs.makeDir(dir)
 end
 for i,file in pairs(files) do
-  print("ID: "..id)
+  write("ID: "..id)
   term.setCursorPos(1,h)
-  print("File: "..file)
-  term.setCursorPos(w - string.len(i.."/"..#files,h))
-  print(i.."/"..#files)
+  write("File: "..file)
+  term.setCursorPos(w - string.len(i.."/"..#files), h)
+  write(i.."/"..#files)
   install(file)
 end
