--- a/install
+++ b/install
@@ -21,10 +21,10 @@ term.setCursorPos(1,1)
 for i,dir in pairs(dirs) do
   fs.makeDir(dir)
 end
+paintutils.drawLine(w / 2 - 5, h / 2 + 1, w / 2 + 5, h / 2 + 1, colors.lightGray)
 for i,file in pairs(files) do
-  term.setCursorPos(w / 2 - string.len("RavenOS") / 2, h / 2 + 1)
+  term.setCursorPos(w / 2 - string.len("RavenOS") / 2, h / 2 - 1)
   write("RavenOS")
-  paintutils.drawLine(w / 2 - 5, h / 2 - 1, w / 2 + 5, h / 2 - 1, colors.lightGray)
   paintutils.drawPixel(w / 2 - 5 + i, h / 2 - 1, colors.green)
   term.setBackgroundColor(colors.lime)
   write("ID: "..id)
