--- a/install
+++ b/install
@@ -24,9 +24,11 @@ end
 paintutils.drawLine(w / 2 - 5, h / 2 + 1, w / 2 + 5, h / 2 + 1, colors.lightGray)
 term.setBackgroundColor(colors.lime)
 for i,file in pairs(files) do
+  percent = math.floor(i/#files * 100)
+  percentBar = math.floor(20 * percent / 100)
   term.setCursorPos(w / 2 - string.len("RavenOS") / 2, h / 2 - 1)
   write("RavenOS")
-  paintutils.drawPixel(w / 2 - 5 + i, h / 2 + 1, colors.green)
+  paintutils.drawPixel(w / 2 - 5 + percentBar, h / 2 + 1, colors.green)
   term.setBackgroundColor(colors.lime)
   term.setCursorPos(1,1)
   write("ID: "..id)
