Finalized install bar and added percent

--- a/install
+++ b/install
@@ -28,8 +28,9 @@ for i,file in pairs(files) do
   percentBar = math.floor(20 * percent / 100)
   term.setCursorPos(w / 2 - string.len("RavenOS") / 2, h / 2 - 1)
   write("RavenOS")
-  paintutils.drawPixel(w / 2 - 10 + percentBar, h / 2 + 1, colors.green)
+  paintutils.drawLine(w / 2 - 10, h / 2 + 1, w / 2 - 10 + percentBar, h / 2 + 1, colors.green)
   term.setBackgroundColor(colors.lime)
+  write(" "..percent.."%")
   term.setCursorPos(1,1)
   write("ID: "..id)
   term.setCursorPos(1,h)
